@@ -542,6 +542,10 @@ Trunk (unreleased changes)
     HDFS-822. Appends to already-finalized blocks can rename across volumes.
     (hairong)
 
+    HDFS-630. In DFSOutputStream.nextBlockOutputStream(), the client can
+              exclude specific datanodes when locating the next block.
+              (Cosmin Lehene via Stack)
+
 Release 0.20.2 - Unreleased
 
   IMPROVEMENTS
